# aoc

./: CMakeLists.txt
2015/day1/: part1.re.cpp  part2.cpp
2015/day10/: part1.re.cpp  part2.re.cpp
2015/day11/: part1.re.cpp  part2.re.cpp
2015/day12/: part1.re.cpp  part2.re.cpp
2015/day13/: part1.re.cpp  part2.re.cpp
2015/day14/: part1.re.cpp
2015/day15/: part1.re.cpp  part2.re.cpp
2015/day16/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2015/day17/: part1.re.cpp  part2.re.cpp
2015/day18/: part1.re.cpp  part2.re.cpp
2015/day19/: CMakeLists.txt  input_small2.txt  part1.re.cpp  part2.re.cpp
2015/day2/: part1.re.cpp  part2.re.cpp
2015/day3/: CMakeLists.txt
2015/day4/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2015/day5/: part1.cpp  part2.cpp
2015/day6/: part1.re.cpp  part2.re.cpp
2015/day7/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2015/day8/: part1.re.cpp  part2.re.cpp
2015/day9/: part1.re.cpp  part2.re.cpp
2020/: CMakeLists.txt
2020/day1/: CMakeLists.txt  part1.cpp  part2.cpp
2020/day10/: CMakeLists.txt  part1.re.cpp  part2.cpp  part2.re.cpp
2020/day11/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2020/day12/: part1.re.cpp  part2.re.cpp
2020/day13/: part1.re.cpp  part2.re.cpp
2020/day14/: part1.re.cpp  part2.re.cpp
2020/day15/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2020/day16/: part1.re.cpp  part2.re.cpp
2020/day17/: part1.re.cpp  part2.re.cpp
2020/day18/: cheat.py  part1.re.cpp  part2.re.cpp
2020/day19/: part1.re.cpp  part2.re.cpp
2020/day2/: CMakeLists.txt  part1.cpp  part2.cpp
2020/day20/: part1.re.cpp  part2.re.cpp
2020/day21/: part1.re.cpp  part2.re.cpp
2020/day22/: part1.re.cpp  part2.re.cpp
2020/day23/: part1.re.cpp  part2.re.cpp
2020/day24/: part1.re.cpp  part2.re.cpp
2020/day25/: CMakeLists.txt  part1.re.cpp
2020/day3/: CMakeLists.txt  part1.cpp  part2.cpp
2020/day4/: CMakeLists.txt  part1.re.cpp  part2.cpp  part2.re.cpp
2020/day5/: CMakeLists.txt  part2.re.cpp
2020/day6/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2020/day7/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2020/day8/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2020/day9/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2023/: CMakeLists.txt
2023/day1/: input_small.txt  part1.re.cpp  part2.re.cpp
2023/day10/: part1.re.cpp  part2.re.cpp
2023/day11/: part1.re.cpp  part2.re.cpp
2023/day12/: part1.re.cpp  part2.re.cpp
2023/day13/: input_small.txt  part1.re.cpp  part2.re.cpp
2023/day14/: part1.re.cpp  part2.re.cpp
2023/day15/: part1.re.cpp  part2.re.cpp
2023/day16/: part1.re.cpp  part2.re.cpp
2023/day17/: part1.re.cpp  part2.re.cpp
2023/day18/: part1.re.cpp  part2.re.cpp
2023/day19/: part1.re.cpp  part2.re.cpp
2023/day2/: part1.re.cpp  part2.re.cpp
2023/day20/: part1.re.cpp  part2.re.cpp
2023/day21/: part1.re.cpp  part2.re.cpp
2023/day22/: part1.re.cpp  part2.re.cpp
2023/day23/: CMakeLists.txt  draw_graph.cpp  part1.re.cpp  part2.re.cpp
2023/day24/: part1.re.cpp  part2.re.cpp  solver.py
2023/day25/: CMakeLists.txt  part1.re.cpp  solver.py
2023/day3/: part1.re.cpp  part2.re.cpp
2023/day4/: part1.re.cpp  part2.re.cpp
2023/day5/: part1.re.cpp  part2.re.cpp
2023/day6/: CMakeLists.txt  part1.re.cpp  part2.re.cpp
2023/day7/: part1.re.cpp  part2.re.cpp
2023/day8/: part1.re.cpp  part2.re.cpp
2023/day9/: part1.re.cpp  part2.re.cpp
2024/day1/: part1.re.cpp  part2.re.cpp
2024/day10/: part1.re.cpp  part2.re.cpp
2024/day11/: part1.re.cpp  part2.re.cpp
2024/day12/: part1.re.cpp  part2.re.cpp
2024/day13/: part1.re.cpp  part2.re.cpp
2024/day14/: part1.re.cpp  part2.re.cpp
2024/day15/: part1.re.cpp  part2.re.cpp
2024/day16/: part1.re.cpp  part2.re.cpp
2024/day17/: part1.re.cpp  part2.re.cpp
2024/day18/: part1.re.cpp  part2.re.cpp
2024/day19/: part1.re.cpp  part2.re.cpp
2024/day2/: part1.re.cpp  part2.re.cpp
2024/day3/: part1.re.cpp  part2.re.cpp
2024/day4/: part1.re.cpp  part2.re.cpp
2024/day5/: part1.re.cpp  part2.re.cpp
2024/day6/: part1.re.cpp  part2.re.cpp
2024/day7/: part1.re.cpp  part2.re.cpp
2024/day8/: part1.re.cpp  part2.re.cpp
2024/day9/: part1.re.cpp  part2.re.cpp
cmake/: aoc-modules.cmake
common/: CMakeLists.txt  aoc.cpp  aoc.hpp  aoc.re.cpp  endian.hpp  fraction.cpp  fraction.hpp  geometry_tools.cpp  geometry_tools.hpp  graph_tools.hpp  hash.cpp  hash.hpp  json.hpp  json.re.cpp  matrix.cpp  matrix.hpp  md5.cpp  ndarray.hpp  segmented_range.cpp  segmented_range.hpp  string_tools.cpp  string_tools.hpp  test_fraction.cpp  test_graph_tools.cpp  test_hash.cpp  test_matrix.cpp  test_ndarray.cpp  test_segmented_range.cpp  test_string_tools.cpp
common/detail/: endian.tcc  graph_tools.tcc
